[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/World/Non_playable_character_.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/World/Non_playable_character_LASTTRY.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/World/TEST_SCENE22.gd" type="Script" id=3]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 472, 256 )

[node name="Character" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 88 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
visible = true
margin_left = 152.0
margin_top = 272.0
margin_right = 352.0
margin_bottom = 342.0
popup_exclusive = true
dialog_hide_on_ok = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 504, 392 )

[node name="Node2D2" parent="." instance=ExtResource( 2 )]
position = Vector2( 79, 376 )

[node name="Character2" parent="." instance=ExtResource( 2 )]
position = Vector2( 528, 104 )
number_of_character = 3
[connection signal="change_dialog" from="Character" to="." method="_on_Character_change_dialog"]
[connection signal="change_number" from="Character" to="." method="_on_Character_change_number"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="custom_action" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_custom_action"]
